--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^3.3.11",
+    "vue-router": "^4.0.13",
     "vuetify": "^3.4.9"
   },
   "devDependencies": {
