--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.3",
+    "axios-mock-adapter": "^1.22.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "vite": "^5.0.10"
